Gazebo/ros2_ws/log/build_2024-12-17_23-24-03/robot_controller/stderr.log
  File "/home/ros2/ros2_ws/install/robot_controller/lib/python3.8/site-packages/robot_controller/robot_controller.py", line 23
    front_sector = ranges[(5*len(ranges)//6:)+(:len(ranges)//6)]
                                           ^
SyntaxError: invalid syntax

